--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "otp-generator": "^4.0.1",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "slugify": "^1.6.6"
   },
   "name": "backend",
   "version": "1.0.0",
